[tool.poetry]
name = "finalproject-kuhtov-m25-555"
version = "0.1.0"
description = "Platform for tracking and simulating currency trading"
authors = ["DuZZlo"]
readme = "README.md"
license = "MIT"

packages = [
    { include = "valutatrade_hub", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pytest = "^8.1.1"

[tool.poetry.scripts]
project = "main:main"
valutatrade = "valutatrade_hub.cli.interface:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"